kratos架构理解
