# internal/server/grpc.go
@@ -1,16 +1,16 @@
 package server
 
 import (
-	v1 "iyyzh-kratos/api/helloworld/v1"
-	"iyyzh-kratos/internal/conf"
-	"iyyzh-kratos/internal/service"
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/transport/grpc"
+	v1 "iyyzh-kratos/api/realword/v1"
+	"iyyzh-kratos/internal/conf"
+	"iyyzh-kratos/internal/service"
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, greeter *service.RealwordService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -26,6 +26,6 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 		opts = append(opts, grpc.Timeout(c.Grpc.Timeout.AsDuration()))
 	}
 	srv := grpc.NewServer(opts...)
-	v1.RegisterGreeterServer(srv, greeter)
+	v1.RegisterRealwordServer(srv, greeter)
 	return srv
 }
