# internal/server/http.go
@@ -1,16 +1,17 @@
 package server
 
 import (
-	v1 "iyyzh-kratos/api/helloworld/v1"
-	"iyyzh-kratos/internal/conf"
-	"iyyzh-kratos/internal/service"
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/transport/http"
+	"github.com/go-kratos/swagger-api/openapiv2"
+	v1 "iyyzh-kratos/api/realword/v1"
+	"iyyzh-kratos/internal/conf"
+	"iyyzh-kratos/internal/service"
 )
 
 // NewHTTPServer new a HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, greeter *service.RealwordService, logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -26,6 +27,12 @@ func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
 	}
 	srv := http.NewServer(opts...)
-	v1.RegisterGreeterHTTPServer(srv, greeter)
+
+	//swagger
+	openAPIhandler := openapiv2.NewHandler()
+	srv.HandlePrefix("/q/", openAPIhandler)
+
+	//http
+	v1.RegisterRealwordHTTPServer(srv, greeter)
 	return srv
 }
