# openapi.yaml
@@ -3,37 +3,185 @@
 
 openapi: 3.0.3
 info:
-    title: Greeter API
-    description: The greeting service definition.
+    title: Realword API
     version: 0.0.1
 paths:
-    /helloworld/{name}:
-        get:
+    /api/user:
+        put:
             tags:
-                - Greeter
-                - subgroup
-            description: Sends a greeting
-            operationId: Greeter_SayHello
-            parameters:
-                - name: name
-                  in: path
-                  required: true
-                  schema:
-                    type: string
+                - Realword
+            operationId: Realword_UpdateUser
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/realword.v1.UpdateUserRequest'
+                required: true
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/helloworld.v1.HelloReply'
+                                $ref: '#/components/schemas/realword.v1.UpdateUserReply'
+        post:
+            tags:
+                - Realword
+            operationId: Realword_CreateUser
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/realword.v1.CreateUserRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/realword.v1.CreateUserReply'
+    /api/user/login:
+        post:
+            tags:
+                - Realword
+            operationId: Realword_Login
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/realword.v1.LoginRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/realword.v1.LoginReply'
+    /api/user/{groupId}/group:
+        get:
+            tags:
+                - Realword
+            operationId: Realword_GetUserList
+            parameters:
+                - name: groupId
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/realword.v1.GetUserListReply'
+    /api/user/{id}:
+        get:
+            tags:
+                - Realword
+            operationId: Realword_GetUser
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/realword.v1.GetUserReply'
+        delete:
+            tags:
+                - Realword
+            operationId: Realword_DeleteUser
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/realword.v1.DeleteUserReply'
 components:
     schemas:
-        helloworld.v1.HelloReply:
+        realword.v1.CreateUserReply:
             type: object
             properties:
-                message:
+                ok:
+                    type: boolean
+        realword.v1.CreateUserRequest:
+            type: object
+            properties:
+                user:
+                    $ref: '#/components/schemas/realword.v1.User'
+        realword.v1.DeleteUserReply:
+            type: object
+            properties:
+                ok:
+                    type: boolean
+        realword.v1.GetUserListReply:
+            type: object
+            properties:
+                user:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/realword.v1.User'
+        realword.v1.GetUserReply:
+            type: object
+            properties:
+                user:
+                    $ref: '#/components/schemas/realword.v1.User'
+        realword.v1.LoginReply:
+            type: object
+            properties:
+                token:
                     type: string
-            description: The response message containing the greetings
+        realword.v1.LoginRequest:
+            type: object
+            properties:
+                account:
+                    type: string
+                password:
+                    type: string
+        realword.v1.UpdateUserReply:
+            type: object
+            properties:
+                ok:
+                    type: boolean
+        realword.v1.UpdateUserRequest:
+            type: object
+            properties:
+                user:
+                    $ref: '#/components/schemas/realword.v1.User'
+        realword.v1.User:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                groupId:
+                    type: integer
+                    format: int64
+                username:
+                    type: string
+                account:
+                    type: string
+                password:
+                    type: string
+                sex:
+                    type: string
 tags:
-    - name: Greeter
+    - name: Realword
